# golden-sun

./: .gitignore  Cargo.toml  README.md  build10.txt  build2.txt  build4.txt  build5.txt  build6.txt  build7.txt  build8.txt  build9.txt  build_out.txt  check4.txt  check5.txt  check_full.txt  check_lib.txt  check_output.txt  clippy_full.txt  clippy_out.txt  clippy_out2.txt  expansion_plan.md  expansion_tasks.md  index.html  tasks.md  tasks_phase9.md  test_final.txt  test_output.txt  verify.ps1  verify.sh
.ai-code-validation/: language.md  symbols.md  validation-1-report.md
.github/workflows/: deploy.yml
.workbuddy/checklist/: deliverable-template.md  fix-workflow.md  phase-0-deliverable.md
.workbuddy/memory/: 2026-06-14.md  2026-06-15.md  2026-06-19.md  2026-06-20.md  MEMORY.md
data/maps/: vale.json
data/npcs/: vale.json
prompts/: 00_project_setup.md  01_mode7_world_map.md  02_sprite_entity.md  03_psynergy.md  04_dialogue.md  05_battle.md  06_ui_audio.md  07_story_content_master.md  08_golden_sun_complete.md  08s_story_content_expansion.md  09_golden_sun_depth_expansion.md
src/: lib.rs  main.rs
src/audio/: mod.rs  synth.rs
src/battle/: calculator.rs  mod.rs  state.rs
src/data/: cutscene.rs  djinn.rs  loader.rs  mod.rs  quest.rs  summon.rs
src/dialogue/: mod.rs  script.rs
src/engine/: camera.rs  constants.rs  error.rs  frame_time.rs  game_state.rs  input.rs  mod.rs  mode7_camera.rs  particle.rs  render_phase.rs  replay.rs  resources.rs  storage.rs  texture.rs  window_config.rs
src/entity/: mod.rs  sprite.rs
src/game/: draw.rs  mod.rs  update.rs  update_shop.txt
src/map/: mod.rs  mode7.rs  tilemap.rs
src/psynergy/: effects.rs  mod.rs
src/scene/: mod.rs
src/ui/: font.rs  mod.rs
tests/: combat_bdd.rs  core.rs  dialogue_bdd.rs  psynergy_bdd.rs  save_bdd.rs  tilekind_bdd.rs
tests/features/: README.md  combat.feature  dialogue.feature  psynergy.feature  save.feature  tilekind.feature
tools/: editor.rs
