[package]
name = "golden-sun"
version = "0.1.0"
edition = "2024"
description = "Golden Sun GBA recreation in Rust + macroquad (Mode 7 pseudo-3D)"

[lib]
# 桌面端只需 rlib；wasm32 构建时需要 cdylib
# wasm 构建命令: cargo build --target wasm32-unknown-unknown --lib
crate-type = ["rlib"]

[dependencies]
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
bincode = "1"
glam = "0.29"

# ── wasm32 专用依赖（桌面端不编译） ──
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
